<resources>
    <string name="app_name">MemeRand</string>
    <string name="next">Next</string>
    <string name="share">Share</string>
    <string name="button">Previous</string>
    <string name="thememe">theMeme</string>
    <string name="action_favorite">Favourite</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">About The Developer</string>
    <string name="memerand_version_1_2">MemeRand Version 1.2</string>
    <string name="made_designed_by"><![CDATA[Made & designed by-]]></string>
    <string name="join_discord">Join Discord</string>
    <string name="visit_website">Visit Website</string>
    <string name="aryan_sidhwani">Aryan Sidhwani</string>
</resources>